--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.8
   path_provider: ^2.0.11
   path: ^1.8.1
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
